[package]
name = "radius"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
raw-window-handle = "0.5"
glium = { git = "https://github.com/glium/glium", branch = "master"}
glutin = "0.30"
glutin-winit = "0.3"
image = "0.24.6"
rawloader = "0.37.1"