[package]
name = "radius"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29"
raw-window-handle = "0.6"
glium = { git = "https://github.com/glium/glium", branch = "master"}
glutin = "0.31"
glutin-winit = "0.4"
image = "0.24.6"
rawloader = "0.37.1"
anyhow = "1.0.75"
nalgebra = "0.32.3"
